Quick fix - Adjust spacing on results header

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -564,7 +564,7 @@ body {
 
 .results-header {
   position: absolute;
-  top: 485px;
+  top: 470px;
   right: 0;
   z-index: 9999;
   max-height: 45px;
